<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.leanback.widget.SearchOrbView
        android:id="@+id/title_orb"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:transitionGroup="true"
        android:layout_gravity="center_vertical|start"
        android:visibility="invisible"
        android:nextFocusRight="@id/main_home_title" />

    <TextView
        android:id="@+id/main_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nextFocusLeft="@id/title_orb"
        android:nextFocusRight="@id/main_live_title"
        android:text="@string/home"
        style="?attr/browseTitleTextStyle" />

    <TextView
        android:id="@+id/main_live_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nextFocusLeft="@id/main_home_title"
        android:nextFocusRight="@id/main_racing_title"
        android:text="@string/live"
        style="?attr/browseTitleTextStyle" />

    <TextView
        android:id="@+id/main_racing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nextFocusLeft="@id/main_live_title"
        android:nextFocusRight="@id/main_programs_title"
        android:text="@string/racing_series"
        style="?attr/browseTitleTextStyle" />

    <TextView
        android:id="@+id/main_programs_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nextFocusLeft="@id/main_racing_title"
        android:nextFocusRight="@id/main_channels_title"
        android:text="@string/programs"
        style="?attr/browseTitleTextStyle" />

    <TextView
        android:id="@+id/main_channels_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nextFocusLeft="@id/main_programs_title"
        android:nextFocusRight="@id/main_feed_title"
        android:text="@string/channels"
        style="?attr/browseTitleTextStyle" />

    <TextView
        android:id="@+id/main_feed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nextFocusLeft="@id/main_channels_title"
        android:text="@string/feed"
        android:transitionGroup="true"
        style="?attr/browseTitleTextStyle" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/lb_browse_title_height"
        android:layout_gravity="center_vertical|end"
        style="?attr/browseTitleTextStyle"/>

    <ImageView
        android:id="@+id/title_badge"
        android:layout_width="wrap_content"
        android:maxWidth="@dimen/lb_browse_title_icon_max_width"
        android:adjustViewBounds="true"
        android:layout_height="@dimen/lb_browse_title_icon_height"
        android:layout_gravity="center_vertical|end"
        android:src="@null"
        android:visibility="gone"
        style="?attr/browseTitleIconStyle"
        tools:ignore="ContentDescription" />

</merge>